--- a/views/opportunity_pdt_views.xml
+++ b/views/opportunity_pdt_views.xml
@@ -24,8 +24,9 @@
                     <page name="Products" string="Products">
                         <field name="pdt_line">
                             <tree editable="bottom">
-                                <field name="product_id"/>
+                                <field name="product_id" visible="false"/>
                                 <field name="name"/>
+                                <field name="default_code"/>
                                 <field name="product_uom_qty"/>
                                 <field name="price_unit" />
                                 <field name="market_price"/>
