--- a/views/lead_product_view.xml
+++ b/views/lead_product_view.xml
@@ -46,13 +46,9 @@
                                 <field name="product_id"
                                 domain="['|',('categ_id','child_of',parent.third_level_category),('categ_id','child_of',parent.second_level_category)]"
                                 />
-                                
-                                <field name="name"/>
+                                <field name="default_code"/>
                                 <field name="product_uom_qty"/>
-                                <field name="price_unit"/>
-                                <field name="market_price"/>
                                 <field name="qty_hand"/>
-                                <field name="categ_id"/>
                                 <field name="stage_name"/>
                             </tree>
                         </field>
@@ -85,6 +81,76 @@
 				        </div>
                     </button>
                 </button>
+            </field>
+        </record>
+
+        <!-- Редагування вигляду списку -->
+        <record id="lead_product_tree_view" model="ir.ui.view">
+            <field name="name">CRM Lead</field>
+            <field name="model">crm.lead</field>
+            <field name="inherit_id" ref="crm.crm_case_tree_view_leads"/>
+            <field name="arch" type="xml">
+                 <!-- <xpath expr="//notebook/page[1]" position="before"> -->
+                <field name="city" 
+                position="attributes"
+                >
+                <attribute name="invisible">True</attribute>
+                </field>
+
+                <field name="contact_name" 
+                position="attributes"
+                >
+                <attribute name="invisible">True</attribute>
+                </field>  
+
+                <field name="country_id" 
+                position="attributes"
+                >
+                <attribute name="invisible">True</attribute>
+                </field> 
+
+                <field name="email_from" 
+                position="attributes"
+                >
+                <attribute name="invisible">True</attribute>
+                </field>
+
+                <field name="team_id" 
+                position="attributes"
+                >
+                <attribute name="invisible">True</attribute>
+                </field>
+
+                <xpath expr="//field[@name='phone']" position="before">
+                    <field name="date_deadline"/>
+                    
+                    <field name="type" 
+                    invisible="True"
+                     />
+                </xpath>
+
+                <xpath expr="//field[@name='phone']" position="after">
+                    
+                    <!-- <button class="oe_inline oe_stat_button" 
+                            name="button_opportunities" 
+                            type="object" 
+                            icon="fa-plus-square-o" 
+                            context="{'default_partner_id': partner_id, 'search_default_draft': 1}" 
+                            options="{}" 
+                            modifiers="{'invisible':[['type','=','opportunity']]}" 
+                            attrs="{'invisible':[['type','=','opportunity']]}" /> -->
+                    <button class="oe_inline oe_stat_button"
+                            string="Деталі"
+                            name="button_opportunities"
+                            type="object"
+                            context="{'default_partner_id': partner_id, 'search_default_draft': 1}"
+                            modifiers="{'invisible':[['type','=','opportunity']]}"
+                            attrs="{'invisible':[['type','=','opportunity']]}"
+                            
+                    />
+                    
+                
+                </xpath>
             </field>
         </record>
 
