--- a/views/lead_product_view.xml
+++ b/views/lead_product_view.xml
@@ -47,6 +47,9 @@
                                 domain="['|',('categ_id','child_of',parent.third_level_category),('categ_id','child_of',parent.second_level_category)]"
                                 /> -->
                                 <field name="product_id" />
+                                <field name="name"  
+                                invisible="1"
+                                />
                                 <field name="default_code"/>
                                 <field name="product_uom_qty"/>
                                 <field name="qty_hand"/>
