--- a/views/lead_product_view.xml
+++ b/views/lead_product_view.xml
@@ -51,6 +51,7 @@
                                 />
                                 <field name="default_code"/>
                                 <field name="product_brand"/>
+                                <field name="product_categ"/>
                                 <field name="product_uom_qty"/>
                                 <field name="qty_hand"/>
                                 <field name="stage_name"/>
