--- a/views/opportunity_pdt_views.xml
+++ b/views/opportunity_pdt_views.xml
@@ -28,7 +28,8 @@
                                 <field name="default_code"/>
                                 <field name="product_uom_qty"/>
                                 <field name="price_unit" />
-                                <field name="market_price"/>
+                                <field name="product_brand"/>
+                                <field name="product_categ"/>
                                 <field name="qty_hand"/>
                             </tree>
                         </field>
