--- a/views/lead_product_view.xml
+++ b/views/lead_product_view.xml
@@ -158,6 +158,9 @@
                 </xpath>
             </field>
         </record>
+        
+        <!-- Розширення product view -->
+
 
     </data>
 </odoo>
