--- a/views/activities_list.xml
+++ b/views/activities_list.xml
@@ -17,7 +17,9 @@
         <field name="name">mail.activity.list.tree</field>
         <field name="model">mail.activity</field>
         <field name="arch" type="xml">
-            <tree string="mail.activity.list">
+            <tree string="mail.activity.list" 
+                    decoration-danger="date_deadline &lt; current_date"
+                    decoration-success="date_deadline == current_date">
                 <field name="res_name"/>
                 <field name="summary"/>
                 <field name="date_deadline"/>
